[MOD] Alignments with Java 9