@@ -27,7 +27,7 @@ public final class XPathQueryServiceTest extends XMLDBBaseTest {
   public void setUp() throws Exception {
     createDB();
     final Class<?> c = Class.forName(DRIVER);
-    final Database database = (Database) c.newInstance();
+    final Database database = (Database) c.getDeclaredConstructor().newInstance();
     coll = database.getCollection(PATH, LOGIN, PW);
     serv = (XPathQueryService) coll.getService("XPathQueryService", "1.0");
   }
